syntax = "proto3";

package battery;

message PowerSupply {
    string name = 1;
    string type = 2;
    string status = 3;
    bool present = 4;
    uint32 voltage_now = 5;
    sint32 current_now = 6;
    uint32 capacity = 7;
    string capacity_level = 8;
    sint32 temp = 9;
    string technology = 10;
    uint32 charge_full = 11;
    uint32 charge_now = 12;
    uint32 charge_full_design = 13;
    string manufacturer = 14;
}

service PowerSupplyService {
    rpc GetPowerSupplyInfo (PowerSupplyInfoRequest) returns (PowerSupplyInfoResponse);
}

message PowerSupplyInfoRequest {
    string path = 1;
}

message PowerSupplyInfoResponse {
    string info = 1;
}
